--- a/results.ipynb
+++ b/results.ipynb
@@ -3765,7 +3765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "id": "35adc117-1a97-4d1e-9eac-f5e426aa772f",
    "metadata": {},
    "outputs": [
@@ -3790,7 +3790,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>level_0</th>\n",
        "      <th>index</th>\n",
        "      <th>beer_name</th>\n",
        "      <th>beer_id</th>\n",
@@ -3811,8 +3810,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
+       "      <th>5</th>\n",
        "      <td>5</td>\n",
        "      <td>Legbiter</td>\n",
        "      <td>19827.0</td>\n",
@@ -3831,8 +3829,7 @@
        "      <td>3.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6</td>\n",
+       "      <th>6</th>\n",
        "      <td>6</td>\n",
        "      <td>Legbiter</td>\n",
        "      <td>19827.0</td>\n",
@@ -3851,8 +3848,7 @@
        "      <td>3.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7</td>\n",
+       "      <th>7</th>\n",
        "      <td>7</td>\n",
        "      <td>Legbiter</td>\n",
        "      <td>19827.0</td>\n",
@@ -3871,8 +3867,7 @@
        "      <td>3.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
+       "      <th>8</th>\n",
        "      <td>8</td>\n",
        "      <td>Legbiter</td>\n",
        "      <td>19827.0</td>\n",
@@ -3891,8 +3886,7 @@
        "      <td>3.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>9</td>\n",
+       "      <th>9</th>\n",
        "      <td>9</td>\n",
        "      <td>Legbiter</td>\n",
        "      <td>19827.0</td>\n",
@@ -3928,11 +3922,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3623352</th>\n",
-       "      <td>8393007</td>\n",
+       "      <th>8393007</th>\n",
        "      <td>8393009</td>\n",
        "      <td>Witch's Hair Pumpkin Ale</td>\n",
        "      <td>64097.0</td>\n",
@@ -3951,8 +3943,7 @@
        "      <td>3.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3623353</th>\n",
-       "      <td>8393008</td>\n",
+       "      <th>8393008</th>\n",
        "      <td>8393010</td>\n",
        "      <td>Witch's Hair Pumpkin Ale</td>\n",
        "      <td>64097.0</td>\n",
@@ -3971,8 +3962,7 @@
        "      <td>4.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3623354</th>\n",
-       "      <td>8393009</td>\n",
+       "      <th>8393009</th>\n",
        "      <td>8393011</td>\n",
        "      <td>Witch's Hair Pumpkin Ale</td>\n",
        "      <td>64097.0</td>\n",
@@ -3991,8 +3981,7 @@
        "      <td>3.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3623355</th>\n",
-       "      <td>8393016</td>\n",
+       "      <th>8393016</th>\n",
        "      <td>8393018</td>\n",
        "      <td>Witch's Hair Pumpkin Ale With Graham Crackers</td>\n",
        "      <td>148940.0</td>\n",
@@ -4011,8 +4000,7 @@
        "      <td>4.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3623356</th>\n",
-       "      <td>8393030</td>\n",
+       "      <th>8393030</th>\n",
        "      <td>8393032</td>\n",
        "      <td>Nut Brown Ale</td>\n",
        "      <td>19140.0</td>\n",
@@ -4032,85 +4020,137 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3623357 rows × 17 columns</p>\n",
+       "<p>3623357 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         level_0    index                                      beer_name  \\\n",
-       "0              5        5                                       Legbiter   \n",
-       "1              6        6                                       Legbiter   \n",
-       "2              7        7                                       Legbiter   \n",
-       "3              8        8                                       Legbiter   \n",
-       "4              9        9                                       Legbiter   \n",
-       "...          ...      ...                                            ...   \n",
-       "3623352  8393007  8393009                       Witch's Hair Pumpkin Ale   \n",
-       "3623353  8393008  8393010                       Witch's Hair Pumpkin Ale   \n",
-       "3623354  8393009  8393011                       Witch's Hair Pumpkin Ale   \n",
-       "3623355  8393016  8393018  Witch's Hair Pumpkin Ale With Graham Crackers   \n",
-       "3623356  8393030  8393032                                  Nut Brown Ale   \n",
+       "           index                                      beer_name   beer_id  \\\n",
+       "5              5                                       Legbiter   19827.0   \n",
+       "6              6                                       Legbiter   19827.0   \n",
+       "7              7                                       Legbiter   19827.0   \n",
+       "8              8                                       Legbiter   19827.0   \n",
+       "9              9                                       Legbiter   19827.0   \n",
+       "...          ...                                            ...       ...   \n",
+       "8393007  8393009                       Witch's Hair Pumpkin Ale   64097.0   \n",
+       "8393008  8393010                       Witch's Hair Pumpkin Ale   64097.0   \n",
+       "8393009  8393011                       Witch's Hair Pumpkin Ale   64097.0   \n",
+       "8393016  8393018  Witch's Hair Pumpkin Ale With Graham Crackers  148940.0   \n",
+       "8393030  8393032                                  Nut Brown Ale   19140.0   \n",
        "\n",
-       "          beer_id                          brewery_name  brewery_id  \\\n",
-       "0         19827.0  Strangford Lough Brewing Company Ltd     10093.0   \n",
-       "1         19827.0  Strangford Lough Brewing Company Ltd     10093.0   \n",
-       "2         19827.0  Strangford Lough Brewing Company Ltd     10093.0   \n",
-       "3         19827.0  Strangford Lough Brewing Company Ltd     10093.0   \n",
-       "4         19827.0  Strangford Lough Brewing Company Ltd     10093.0   \n",
-       "...           ...                                   ...         ...   \n",
-       "3623352   64097.0                Twisted Manzanita Ales     23640.0   \n",
-       "3623353   64097.0                Twisted Manzanita Ales     23640.0   \n",
-       "3623354   64097.0                Twisted Manzanita Ales     23640.0   \n",
-       "3623355  148940.0                Twisted Manzanita Ales     23640.0   \n",
-       "3623356   19140.0   Summit Station Restaurant & Brewery       885.0   \n",
+       "                                 brewery_name  brewery_id              style  \\\n",
+       "5        Strangford Lough Brewing Company Ltd     10093.0   English Pale Ale   \n",
+       "6        Strangford Lough Brewing Company Ltd     10093.0   English Pale Ale   \n",
+       "7        Strangford Lough Brewing Company Ltd     10093.0   English Pale Ale   \n",
+       "8        Strangford Lough Brewing Company Ltd     10093.0   English Pale Ale   \n",
+       "9        Strangford Lough Brewing Company Ltd     10093.0   English Pale Ale   \n",
+       "...                                       ...         ...                ...   \n",
+       "8393007                Twisted Manzanita Ales     23640.0        Pumpkin Ale   \n",
+       "8393008                Twisted Manzanita Ales     23640.0        Pumpkin Ale   \n",
+       "8393009                Twisted Manzanita Ales     23640.0        Pumpkin Ale   \n",
+       "8393016                Twisted Manzanita Ales     23640.0        Pumpkin Ale   \n",
+       "8393030   Summit Station Restaurant & Brewery       885.0  English Brown Ale   \n",
        "\n",
-       "                     style  abv                date       user_name  \\\n",
-       "0         English Pale Ale  4.8 2014-12-01 10:59:12       Hellpop65   \n",
-       "1         English Pale Ale  4.8 2014-05-29 09:59:28        Latarnik   \n",
-       "2         English Pale Ale  4.8 2014-02-26 10:59:12  RochefortChris   \n",
-       "3         English Pale Ale  4.8 2014-02-10 10:59:12      OKCNittany   \n",
-       "4         English Pale Ale  4.8 2014-01-25 10:59:12          jaydoc   \n",
-       "...                    ...  ...                 ...             ...   \n",
-       "3623352        Pumpkin Ale  9.5 2012-10-24 09:59:28      SocalKicks   \n",
-       "3623353        Pumpkin Ale  9.5 2012-07-12 09:59:28     NickMunford   \n",
-       "3623354        Pumpkin Ale  9.5 2012-07-08 09:59:28        jdmandel   \n",
-       "3623355        Pumpkin Ale  8.8 2014-12-08 10:59:12         dvmin98   \n",
-       "3623356  English Brown Ale  5.3 2012-07-08 09:59:28      Redsox1539   \n",
+       "         abv                date       user_name                user_id  \\\n",
+       "5        4.8 2014-12-01 10:59:12       Hellpop65        hellpop65.48993   \n",
+       "6        4.8 2014-05-29 09:59:28        Latarnik         latarnik.52897   \n",
+       "7        4.8 2014-02-26 10:59:12  RochefortChris  rochefortchris.697017   \n",
+       "8        4.8 2014-02-10 10:59:12      OKCNittany      okcnittany.144868   \n",
+       "9        4.8 2014-01-25 10:59:12          jaydoc          jaydoc.265507   \n",
+       "...      ...                 ...             ...                    ...   \n",
+       "8393007  9.5 2012-10-24 09:59:28      SocalKicks      socalkicks.663388   \n",
+       "8393008  9.5 2012-07-12 09:59:28     NickMunford     nickmunford.100959   \n",
+       "8393009  9.5 2012-07-08 09:59:28        jdmandel        jdmandel.615971   \n",
+       "8393016  8.8 2014-12-08 10:59:12         dvmin98         dvmin98.520731   \n",
+       "8393030  5.3 2012-07-08 09:59:28      Redsox1539      redsox1539.683632   \n",
        "\n",
-       "                       user_id  appearance  aroma  palate  taste  overall  \\\n",
-       "0              hellpop65.48993         NaN    NaN     NaN    NaN      NaN   \n",
-       "1               latarnik.52897         NaN    NaN     NaN    NaN      NaN   \n",
-       "2        rochefortchris.697017         NaN    NaN     NaN    NaN      NaN   \n",
-       "3            okcnittany.144868         NaN    NaN     NaN    NaN      NaN   \n",
-       "4                jaydoc.265507         NaN    NaN     NaN    NaN      NaN   \n",
-       "...                        ...         ...    ...     ...    ...      ...   \n",
-       "3623352      socalkicks.663388         NaN    NaN     NaN    NaN      NaN   \n",
-       "3623353     nickmunford.100959         NaN    NaN     NaN    NaN      NaN   \n",
-       "3623354        jdmandel.615971         NaN    NaN     NaN    NaN      NaN   \n",
-       "3623355         dvmin98.520731         NaN    NaN     NaN    NaN      NaN   \n",
-       "3623356      redsox1539.683632         NaN    NaN     NaN    NaN      NaN   \n",
+       "         appearance  aroma  palate  taste  overall  rating  \n",
+       "5               NaN    NaN     NaN    NaN      NaN    3.25  \n",
+       "6               NaN    NaN     NaN    NaN      NaN    3.50  \n",
+       "7               NaN    NaN     NaN    NaN      NaN    3.50  \n",
+       "8               NaN    NaN     NaN    NaN      NaN    3.75  \n",
+       "9               NaN    NaN     NaN    NaN      NaN    3.25  \n",
+       "...             ...    ...     ...    ...      ...     ...  \n",
+       "8393007         NaN    NaN     NaN    NaN      NaN    3.50  \n",
+       "8393008         NaN    NaN     NaN    NaN      NaN    4.00  \n",
+       "8393009         NaN    NaN     NaN    NaN      NaN    3.75  \n",
+       "8393016         NaN    NaN     NaN    NaN      NaN    4.25  \n",
+       "8393030         NaN    NaN     NaN    NaN      NaN    3.50  \n",
        "\n",
-       "         rating  \n",
-       "0          3.25  \n",
-       "1          3.50  \n",
-       "2          3.50  \n",
-       "3          3.75  \n",
-       "4          3.25  \n",
-       "...         ...  \n",
-       "3623352    3.50  \n",
-       "3623353    4.00  \n",
-       "3623354    3.75  \n",
-       "3623355    4.25  \n",
-       "3623356    3.50  \n",
-       "\n",
-       "[3623357 rows x 17 columns]"
+       "[3623357 rows x 16 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ba_ratings_[pd.isna(ba_ratings_['overall'])].reset_index() # Let's keep these values since they have the final rating value"
+    "ba_ratings_[pd.isna(ba_ratings_['overall'])] # Let's keep these values since they have the final rating value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "05a2780a-e20f-4619-b1e2-fe16115ec265",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>beer_name</th>\n",
+       "      <th>beer_id</th>\n",
+       "      <th>brewery_name</th>\n",
+       "      <th>brewery_id</th>\n",
+       "      <th>style</th>\n",
+       "      <th>abv</th>\n",
+       "      <th>date</th>\n",
+       "      <th>user_name</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>appearance</th>\n",
+       "      <th>aroma</th>\n",
+       "      <th>palate</th>\n",
+       "      <th>taste</th>\n",
+       "      <th>overall</th>\n",
+       "      <th>rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [index, beer_name, beer_id, brewery_name, brewery_id, style, abv, date, user_name, user_id, appearance, aroma, palate, taste, overall, rating]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rb_ratings_[pd.isna(rb_ratings_['overall'])] # It seems every rating has in complete form"
    ]
   },
   {
