--- a/results.ipynb
+++ b/results.ipynb
@@ -4947,7 +4947,11 @@
     "# use the time information to determine the season during which each rating was posted (only consider countries with 4 seasons)\n",
     "# group ratings by season\n",
     "# within each group, determine the average final rating of each beer style\n",
-    "# compare the results for the different seasons"
+    "# compare the results for the different seasons\n",
+    "\n",
+    "\n",
+    "#add seasonal bias\n",
+    "\n"
    ]
   },
   {
@@ -4989,7 +4993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
