--- a/results.ipynb
+++ b/results.ipynb
@@ -4947,11 +4947,125 @@
     "# use the time information to determine the season during which each rating was posted (only consider countries with 4 seasons)\n",
     "# group ratings by season\n",
     "# within each group, determine the average final rating of each beer style\n",
-    "# compare the results for the different seasons\n",
+    "# compare the results for the different seasons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5446d6e1-9dd7-47b5-ae4a-bae9858d0744",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# determine season based on date\n",
+    "def get_season(date):\n",
+    "    month = date.month\n",
+    "    if month in [12, 1, 2]:\n",
+    "        return 'Winter'\n",
+    "    elif month in [3, 4, 5]:\n",
+    "        return 'Spring'\n",
+    "    elif month in [6, 7, 8]:\n",
+    "        return 'Summer'\n",
+    "    elif month in [9, 10, 11]:\n",
+    "        return 'Fall'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01dd3de5-cb69-4974-a980-1951850b3b2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add season information to ratings dataframes\n",
+    "ba_ratings_['season'] = ba_ratings_['date'].apply(lambda x: get_season(pd.to_datetime(x)))\n",
+    "rb_ratings_['season'] = rb_ratings_['date'].apply(lambda x: get_season(pd.to_datetime(x)))\n",
     "\n",
+    "# Merge with beers data to include beer style information\n",
+    "ba_merged = ba_ratings_.merge(ba_beers_cleaned[['beer_id', 'style']], on='beer_id', how='left')\n",
+    "rb_merged = rb_ratings_.merge(rb_beers_cleaned[['beer_id', 'style']], on='beer_id', how='left')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5969e14-3b78-40b7-a0c3-9d3bf6656eef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group by season and beer style, then calculate average final rating for each style within each season\n",
+    "ba_seasonal_avg = ba_merged.groupby(['season', 'style'])['rating'].mean().reset_index()\n",
+    "rb_seasonal_avg = rb_merged.groupby(['season', 'style'])['rating'].mean().reset_index()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12ae2d10-5a91-4f88-8761-70db08edc167",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Combine BeerAdvocate and RateBeer seasonal averages\n",
+    "seasonal_avg = pd.concat([ba_seasonal_avg, rb_seasonal_avg])\n",
+    "seasonal_avg = seasonal_avg.groupby(['season', 'style'])['rating'].mean().reset_index()\n",
     "\n",
-    "#add seasonal bias\n",
-    "\n"
+    "# Pivot for comparison across seasons\n",
+    "seasonal_pivot = seasonal_avg.pivot(index='style', columns='season', values='rating')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a27af10e-a3bd-4142-a882-7bb82202d408",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Seasonal Bias Analysis - Average Ratings per Style by Season\")\n",
+    "display(seasonal_pivot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a95bdb2-d17a-4ea6-8b6f-c706036715ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot average ratings by beer style across seasons\n",
+    "plt.figure(figsize=(14, 8))\n",
+    "seasonal_pivot.plot(kind='bar', figsize=(14, 8))\n",
+    "plt.title(\"Average Ratings by Beer Style Across Seasons\")\n",
+    "plt.xlabel(\"Beer Style\")\n",
+    "plt.ylabel(\"Average Rating\")\n",
+    "plt.legend(title='Season')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80315fd6-700a-4e08-b334-90a7f76f403f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Correlation matrix for seasonal ratings\n",
+    "correlation_matrix = seasonal_pivot.corr()\n",
+    "print(\"Correlation Matrix of Seasonal Ratings\")\n",
+    "display(correlation_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26594269-ba71-4917-8114-acfe060100c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Heatmap of correlation matrix\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.heatmap(correlation_matrix, annot=True, cmap=\"coolwarm\", fmt=\".2f\")\n",
+    "plt.title(\"Correlation Matrix of Seasonal Ratings\")\n",
+    "plt.show()"
    ]
   },
   {
