--- a/results.ipynb
+++ b/results.ipynb
@@ -1952,6 +1952,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3debc35f-c8ea-4976-856b-42682a0352b0",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- Firstly, checking the data to see what are the missing values.\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "e26f5ef0-12ec-4634-ac92-02d055a9166f",
@@ -2156,6 +2166,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b54a652-7ead-4b83-b60e-48382f5c18e8",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- It seems there are some beers with no ratings at all. Just remove these data since we concerced only the rated ones.\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "5df33c5a-1b5b-413e-b9fe-b81cddd7bd3b",
@@ -2235,6 +2255,16 @@
    "metadata": {},
    "source": [
     "## Checking the correspondance between brewery_id in the beers DataFrames"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee3e4df6-7b52-498f-be41-7bd3b5460a57",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- To see whether brewery_id in the beers data corresponds, selected ID is compared in both of the dataframe\n",
+    "---"
    ]
   },
   {
@@ -2408,13 +2438,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "951cb3f4-5316-4d5c-948b-64cd2c5af9ed",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- Since we are not going to use location information related to states of the USA, they should be removed. Moreover, some countries expressed as double names and there are some links which should also be cleaned.\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "64e6f570-cc1e-44fb-bf34-5e2b77b8fa62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def edit_location(data_name):\n",
+    "def edit_location(data_name): # Function that cleans the location column\n",
     "    data_name_c = data_name.copy()\n",
     "    for i in range(len(data_name['location'])):\n",
     "        if len(data_name['location'][i]) > 10:\n",
@@ -2527,6 +2567,16 @@
    "metadata": {},
    "source": [
     "## Removing the countries who have too few reviewers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be720201-f54f-4a2c-b6c3-abf9885c8d87",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- We will only need the users whose locations are known, others should be neglected.\n",
+    "---"
    ]
   },
   {
@@ -2865,6 +2915,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "844858f0-d457-4585-818f-c9f521c73c3c",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- It is realized that location information of the dataframes also should be cleaned.\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "id": "8833e788-2397-453e-b37d-90eadf6abe2d",
@@ -3052,6 +3112,16 @@
    ],
    "source": [
     "ba_users_cleaned_2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3714e109-ece0-44b6-a961-05f188d3358c",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- In order to clean the countries who have too few users, a threshold value is implemented. \n",
+    "---"
    ]
   },
   {
@@ -3484,7 +3554,17 @@
    "id": "b01b3e4e-23f5-4d3d-abfd-42bfb2a30154",
    "metadata": {},
    "source": [
-    "# Cleaning the missed values in ratings"
+    "# Cleaning the missing values in ratings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8adc5616-1809-43f2-b58c-34aa4a08336b",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- Missing values in the ratings data can be seen below. Some of them contain missing information about details of the rating such as taste, aroma etc. These values should be kept because only their overall rating can be used. However, ratings in the 'rating' column that contains nothing must be removed.\n",
+    "---"
    ]
   },
   {
@@ -4332,6 +4412,16 @@
    "source": [
     "ba_ratings_[pd.isna(ba_ratings_['overall'])]# Let's keep these values since they have the final rating value\n",
     "display(ba_ratings_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "626ad4e0-1a13-4fd9-b4c9-07eddf95d7e9",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- Above mentioned problem about details of the ratings does not exist in the RateBeer data.\n",
+    "---"
    ]
   },
   {
@@ -5609,9 +5699,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ada] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-ada-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5623,7 +5713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
