--- a/results.ipynb
+++ b/results.ipynb
@@ -4994,9 +4994,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0639f7cd-b5fd-4b82-9139-f343cf7de10c",
+   "metadata": {},
+   "source": [
+    "This function categorizes each month into a season to identify when each beer rating was posted. We’re only considering countries with four seasons."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5446d6e1-9dd7-47b5-ae4a-bae9858d0744",
+   "id": "aec821ac-d475-4875-bb30-f024ed93b9e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5014,6 +5022,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01dc07ab-03a9-45d1-9f0c-20d50e23ecfc",
+   "metadata": {},
+   "source": [
+    "Here, we apply the get_season function to add a 'season' column to both ba_ratings_ (BeerAdvocate) and rb_ratings_ (RateBeer) datasets, ensuring each rating has its respective season assigned."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "01dd3de5-cb69-4974-a980-1951850b3b2c",
@@ -5022,11 +5038,15 @@
    "source": [
     "# Add season information to ratings dataframes\n",
     "ba_ratings_['season'] = ba_ratings_['date'].apply(lambda x: get_season(pd.to_datetime(x)))\n",
-    "rb_ratings_['season'] = rb_ratings_['date'].apply(lambda x: get_season(pd.to_datetime(x)))\n",
-    "\n",
-    "# Merge with beers data to include beer style information\n",
-    "ba_merged = ba_ratings_.merge(ba_beers_cleaned[['beer_id', 'style']], on='beer_id', how='left')\n",
-    "rb_merged = rb_ratings_.merge(rb_beers_cleaned[['beer_id', 'style']], on='beer_id', how='left')\n"
+    "rb_ratings_['season'] = rb_ratings_['date'].apply(lambda x: get_season(pd.to_datetime(x)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4f9daff-4d41-441c-89d2-5d5c0c17d45d",
+   "metadata": {},
+   "source": [
+    "This code block generates boxplots showing the distribution of ratings by season for each platform, providing a visual sense of seasonal variation in ratings."
    ]
   },
   {
@@ -5059,6 +5079,14 @@
     "plt.ylabel(\"Rating\")\n",
     "plt.show()\n",
     "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f69faf33-672a-4eb7-9ca8-49232018dd28",
+   "metadata": {},
+   "source": [
+    "This part calculates the average rating for each season on both platforms and then combines these into a single DataFrame for easier comparison"
    ]
   },
   {
@@ -5097,6 +5125,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9f7467b1-3ae6-4287-a26f-9b016ed7f04d",
+   "metadata": {},
+   "source": [
+    "Both BeerAdvocate and RateBeer show slight variations in ratings across seasons. Average ratings on BeerAdvocate are relatively stable, with minor variations, while RateBeer ratings show a bit more fluctuation across seasons. Winter and Spring generally have slightly higher ratings than Summer and Fall, possibly due to seasonal preferences for richer or stronger beers that are typically enjoyed in cooler weather."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0a95bdb2-d17a-4ea6-8b6f-c706036715ff",
@@ -5111,6 +5147,14 @@
     "plt.legend(title='Source')\n",
     "plt.show()\n",
     "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45b46b38-c625-4069-8556-c033b7e4b4a6",
+   "metadata": {},
+   "source": [
+    "BeerAdvocate ratings tend to be consistently higher than those on RateBeer across all seasons, which might reflect differences in user base preferences or rating scales."
    ]
   },
   {
@@ -5139,6 +5183,14 @@
     "plt.title(\"Correlation Matrix of Seasonal Ratings\")\n",
     "plt.show()\n",
     "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ed2495d-1b4f-4b23-97c4-5d00203711a1",
+   "metadata": {},
+   "source": [
+    "The high correlation (0.97) between BeerAdvocate and RateBeer seasonal ratings indicates that both platforms exhibit similar seasonal patterns, despite variations in their absolute values. This strong correlation suggests a shared trend in beer preferences among users, regardless of platform differences."
    ]
   },
   {
@@ -5699,9 +5751,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:ada] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ada-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -5713,7 +5765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
