--- a/results.ipynb
+++ b/results.ipynb
@@ -4304,7 +4304,7 @@
    "id": "c65b8b22-e8b4-4232-98d7-f627cb97977e",
    "metadata": {},
    "source": [
-    "We will also use the time information to determine if regional beer style preferences are stable (which would suggest that they are strongly affected by culture)or if they vary over. Basically, we will use linear regression to see that beer style preferences are stable or not. To demonstrate that this is useful and feasible, we will analyze the some countries like U.S, Canada and England where we have enough data and the relatively same cultural habits to see time evolution of the ratings for the chosen beer styles."
+    "**We will also use the time information to determine if regional beer style preferences are stable (which would suggest that they are strongly affected by culture)or if they vary over**. Basically, we will use linear regression to see that beer style preferences are stable or not. To demonstrate that this is useful and feasible, we will analyze the some countries like U.S, Canada and England where we have enough data and the relatively same cultural habits to see time evolution of the ratings for the chosen beer styles."
    ]
   },
   {
@@ -4374,7 +4374,7 @@
    "id": "394d1758-8232-48f0-aeff-da1780895dfb",
    "metadata": {},
    "source": [
-    "For the sake of simplicity of the plot, since trends are obvious, we will not plot the linear models. First of all, average ratings show that American IPA is more preferable than Pale Lager in these three chosen countries. Time evolution of the average ratings reveals that American IPA ratings remain relatively stable for these three chosen country, suggesting a steady but not markedly increasing interest. Only in England, there is a significant deviation between the year 2000-2006. Interestingly, Pale Lager ratings in these three counts increase constantly over time. It suggests that there is a noticeable evolution in tastes over time, likely driven by global beer trends and expanding market availability, challenging the idea of stable, regionally bound beer preferences. More importantly, these patterns reveals that certain preferences may be culturally rooted because trends are really close to each other in U.S, Canada and England."
+    "For the sake of simplicity of the plot, since trends are obvious, we will not plot the linear models. First of all, average ratings show that American IPA is more preferable than Pale Lager in these three chosen countries. Time evolution of the average ratings reveals that American IPA ratings remain relatively stable for these countries, suggesting a steady but not markedly increasing interest. Only in England, there is a significant deviation between the year 2000-2006. Interestingly, Pale Lager ratings in these three counts increase constantly over time. It suggests that there is a noticeable evolution in tastes over time, likely driven by global beer trends and expanding market availability, challenging the idea of stable, regionally bound beer preferences. *More importantly, these patterns reveals that certain preferences may be culturally rooted because trends are really close to each other in U.S, Canada and England.*"
    ]
   },
   {
