--- a/results.ipynb
+++ b/results.ipynb
@@ -7545,6 +7545,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a57c0dd-4e8a-4144-9df7-8164b4ee2084",
+   "metadata": {},
+   "source": [
+    "#### Revised Approach\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b25465eb-9874-4312-86b5-68697c3f9980",
+   "metadata": {},
+   "source": [
+    "We now have a revised approach for P3. We will have a regression model that adjusts for potential confounders. To do that:\n",
+    "1. We will perform linear regression:\n",
+    "    * dependent variable: final rating\n",
+    "    * independent variables: season when the review was written, beer style (as certain beer styles are more likely to be available or consumed in specific seasons), average rating across all reviews by the user, ABV (as stronger beers might be more popular in colder months), Season×Beer style (interaction term that captures how the effect of season varies across different beer styles)\n",
+    "2. We will examine the coefficients for the season: they indicate whether ratings are significantly higher or lower in certain seasons, after accounting for confounders.\n",
+    "3. Using the regression coefficients, we will calculate the predicted ratings for each beer style in each season, and create a table with columns for season, beer style and predicted rating.\n",
+    "4. We will use line charts to show the seasonal trends for each beer style: plot beer styles on the y-axis and seasons on the x-axis, with a line for each beer style.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "987f17ea-67d0-443a-ad16-73939198dd54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c373b72-ffc3-43ac-8df3-73e52ce72068",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8228302a-6197-4435-a938-1b1a0ca5d43a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7c65c23-9fcf-4e0d-a97c-8b336dda2065",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "93157f3c",
    "metadata": {},
    "source": [
@@ -8272,9 +8326,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:ada] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ada-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -8286,7 +8340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
